--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ after_success:
   - docker push manaspati/multi-nginx
   - docker push manaspati/multi-server
   - docker push manaspati/multi-worker
+
+deploy: 
+  provider: elasticbeanstalk
+  region: 'us-west-2'
+  app: 'multidocker'
+  env: 'Multidocker-env'
+  bucker_name: 'elasticbeanstalk:us-west-2:640438245460' 
+  bucket_path: 'docker-multi'
+  true: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
