AWS access key format

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ after_success:
 
 deploy: 
   provider: elasticbeanstalk
+  access_key_id: 
+    secure: "$AWS_ACCESS_KEY"
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
   region: 'us-west-2'
   app: 'multidocker'
   env: 'Multidocker-env'
@@ -29,5 +33,3 @@ deploy:
   bucket_path: 'docker-multi'
   on: 
     branch: master
-  access_key_id: "$AWS_ACCESS_KEY"
-  secret_access_key: "$AWS_SECRET_KEY"
