--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
   region: 'us-west-2'
   app: 'multidocker'
   env: 'Multidocker-env'
-  bucker_name: 'elasticbeanstalk:us-west-2:640438245460' 
+  bucker_name: 'elasticbeanstalk-us-west-2:640438245460' 
   bucket_path: 'docker-multi'
   on: 
     branch: master
